--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ addons:
 before_install:
   - # start your web application and listen on `localhost`
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-script: phantomjs phantomTest.js
+script: 
+  - phantomjs phantomTest.js
+  - node readTest.js
