--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - # start your web application and listen on `localhost`
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 script: 
-  - phantomjs phantomTest.js
+  - phantomjs ./tests/phantomjsTest.js
