--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lexicon-rainbow",
-  "version": "0.0.11",
+  "version": "0.0.14",
   "description": "Lexicon-Rainbow Visualization Module",
     "keywords": [
     "visualization",
@@ -49,5 +49,12 @@
   },
   "dependencies": {
 	"d3": "^4.10.0"  
+  },
+  "sniper": {
+    "js": [
+		"http://d3js.org/d3.v4.min.js",
+		"http://cdn.rawgit.com/IbrahimTanyalcin/lexicon-rainbow/170be4b9/min/lexiconRainbow.d3v4.min.js"
+	],
+    "first": "proteins"
   }
 }
