--- a/.jsbeautifyrc.json
+++ b/.jsbeautifyrc.json
@@ -2,6 +2,7 @@
     "js": {
 		"end-with-newline": true,
 		"indent_with_tabs": true,
-		"break_chained_methods": true
+		"break_chained_methods": true,
+		"wrap_line_length": 80
 	}
 }
