--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lexicon-rainbow",
-  "version": "0.0.17",
+  "version": "0.0.19",
   "description": "Lexicon-Rainbow Visualization Module",
     "keywords": [
     "visualization",
@@ -54,6 +54,9 @@
     "js": [
 		"http://d3js.org/d3.v4.min.js",
 		"http://cdn.rawgit.com/IbrahimTanyalcin/lexicon-rainbow/170be4b9/min/lexiconRainbow.d3v4.min.js"
+	],
+	"snippets":[
+		"snippets"
 	],
     "first": "proteins"
   }
